<resources>
    <string name="app_name">HW Mobile</string>
    <string name="button_hw1">HW BloodPressure</string>
    <string name="button_hw2">HW HeartRate</string>
    <string name="button_hw3">HW OxygenSaturation</string>
    <string name="button_hw4">HW RespiratoryRate</string>
    <string name="button_hw5">HW Temperature</string>
    <string name="textview">TextView</string>
    <string name="text_estimated_time">textEstimatedTime</string>
    <string name="label_textview">Representação Turtle:</string>
    <string name="label_estimated_time">Tempo de processamento:</string>
    <string name="text_widget">Widget</string>
    <string name="label_args0">Quantidade de tuplas:</string>
    <string name="label_args1">Intervalo entre tuplas:</string>
    <string name="label_args2">Representações em Cache:</string>
    <string name="text_args0">TextArgs</string>
    <string name="text_args1">TextArgs</string>
    <string name="text_args2">TextArgs</string>
</resources>
