<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.ufg.inf.mestrado.hermeswidgetmobile.HermesWidgetActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textview"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_estimated_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/label_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/label_estimated_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_widget"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="Qtd de Representações:"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintRight_toLeftOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_args0"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="Intervalo:"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintRight_toLeftOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_args1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_args2"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintRight_toLeftOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_args2"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginEnd="16dp" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>